Broken can't get osjs module

--- a/package.json
+++ b/package.json
@@ -8,7 +8,18 @@
     "build": "webpack",
     "watch": "webpack --watch",
     "stylelint": "stylelint index.scss src/**/*.scss",
-    "prepublishOnly": "npm run eslint && npm run stylelint && rm ./dist/* && npm run build"
+    "prepublishOnly": "npm run eslint && npm run stylelint && rm ./dist/* && npm run build",
+    "ng": "ng",
+    "start": "ng serve",
+    "ngbuild": "ng build",
+    "lint": "ng lint ng-universal-demo",
+    "build:client-and-server-bundles": "ng build --prod && ng run ng-universal-demo:server:production",
+    "build:prerender": "npm run build:client-and-server-bundles && npm run compile:server && npm run generate:prerender",
+    "build:ssr": "npm run build:client-and-server-bundles && npm run compile:server",
+    "compile:server": "tsc -p server.tsconfig.json",
+    "generate:prerender": "cd dist && node prerender",
+    "serve:prerender": "cd dist/browser && http-server",
+    "serve:ssr": "node dist/server"
   },
   "repository": {
     "type": "git",
@@ -23,12 +34,48 @@
     "metadata.json"
   ],
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "@angular/animations": "8.2.14",
+    "@angular/common": "8.2.14",
+    "@angular/compiler": "8.2.14",
+    "@angular/core": "8.2.14",
+    "@angular/forms": "8.2.14",
+    "@angular/platform-browser": "8.2.14",
+    "@angular/platform-browser-dynamic": "8.2.14",
+    "@angular/platform-server": "8.2.14",
+    "@angular/router": "8.2.14",
+    "@nguniversal/common": "^8.2.6",
+    "@nguniversal/express-engine": "^8.2.6",
+    "@nguniversal/module-map-ngfactory-loader": "^8.2.6",
+    "core-js": "2.4.1",
+    "devextreme": "19.2",
+    "devextreme-angular": "19.2",
+    "express": "^4.17.1",
+    "jszip": "3.2.2",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "6.5.4",
+    "stream": "^0.0.2",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@babel/preset-react": "^7.0.0",
-    "@osjs/dev-meta": "^1.0.1"
+    "@osjs/dev-meta": "^1.0.1",
+    "@angular-devkit/build-angular": "0.803.23",
+    "@angular-devkit/build-optimizer": "^0.803.23",
+    "@angular/cli": "8.3.23",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "8.2.14",
+    "@ngtools/webpack": "^8.3.23",
+    "@types/node": "^13.1.7",
+    "codelyzer": "^5.2.1",
+    "core-js": "^3.6.4",
+    "http-server": "^0.12.1",
+    "postcss-loader": "^3.0.0",
+    "pre-commit": "^1.2.2",
+    "safe-buffer": "^5.2.0",
+    "ts-loader": "^6.2.1",
+    "tslib": "^1.10.0",
+    "tslint": "^5.20.1",
+    "typescript": ">=3.4.0 and <3.6.0",
+    "webpack": "^4.41.5"
   },
   "author": "Anders Evenrud <andersevenrud@gmail.com>",
   "license": "BSD-2-Clause",
@@ -54,7 +101,6 @@
   },
   "babel": {
     "presets": [
-      "@babel/preset-react",
       "@babel/preset-env"
     ],
     "plugins": [
